//   Protobuf code generated by NMEA message router application (c) Sterwen Technology 2023
//   generated on 2025-57-11:21:57
//   do not modify code


syntax = "proto3";

message Pgn126993ClassPb {  // Heartbeat
	float interval = 1;
	uint32 sequence = 2;
	uint32 ctrl1_state = 3;
	uint32 ctrl2_state = 4;
	uint32 equipment_status = 5;
}

message Pgn126996ClassPb {  // Product Information
	uint32 nmea2000_version = 1;
	uint32 product_code = 2;
	string model_id = 3;
	string software_version = 4;
	string model_version = 5;
	string model_serial_code = 6;
	uint32 certification_level = 7;
	uint32 load_equivalency = 8;
}

message Pgn126998ClassPb {  // Configuration Information
	string installation_1 = 1;
	string installation_2 = 2;
	string manufacturer_info = 3;
}

